fixed basic errors

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
+
 <html>
 <head> <title>Rohan Natraj</title> 
+	<meta charset=utf-8 />
 	<link rel="stylesheet" type= "text/css"media= "screen" href= "resume.css"/>
+	
 
 </head>
 
