--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <html>
 <head> <title>Rohan Natraj</title> 
 	<meta charset=utf-8 />
-	<link rel="stylesheet" type= "text/css"media= "screen" href= "resume.css"/>
-	
-
+	<link rel="stylesheet" type= "text/css" media= "screen" href= "resume.css"/>
 </head>
 
 <body>
-	<h1>Rohan Natraj</h1> 
-
+	<h1>Rohan Natraj
+	<img src="http://i.imgur.com/QMSSm.gif"/> 
+	</h1>
 </body>
 
 
