--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Rohan Natraj
-	<img src="http://i.imgur.com/QMSSm.gif"/> 
+	<img alt= "Samuel L. Jackson is a Man with Many Faces" src="http://i.imgur.com/271Rx.jpg"/> 
 	</h1>
 </body>
 
