--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-	<h1>Rohan Natraj
-	<img alt= "Samuel L. Jackson is a Man with Many Faces" src="http://i.imgur.com/271Rx.jpg"/> 
-	</h1>
+	<h1>Rohan Natraj</h1>
 </body>
 
 
