--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Rohan Natraj</h1>
-	<p><img alt="Pondering the Finer Things in Life" src=file:///home/rohannatraj/Desktop/945344_10151937717662995_331491474_n.jpg/> </p>
+	<p><img alt="I Suppose it Will All Make Sense When We Grow Up" src=/c_hobbes.jpg/> </p>
 </body>
 
 
