correction to image uri

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Rohan Natraj</h1>
-	<p><img alt="I Suppose it Will All Make Sense When We Grow Up" src=/c_hobbes.jpg/> </p>
+	<p><img alt="I Suppose it Will All Make Sense When We Grow Up" src="/c_hobbes.jpg"/> </p>
 </body>
 
 
