--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
 <head> <title>Rohan Natraj</title> 
 	<meta charset=utf-8 />
-	<link rel="stylesheet" type= "text/css" media= "screen" href= "resume.css"/>
+	<link rel="stylesheet" type= "text/css" media= "screen" href= "index.css"/>
 </head>
 
 <body>
-	<h1>Rohan Natraj</h1>
+	<h1><div id = name>Rohan Natraj</div></h1>
 	<p><img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" > </p>
+	<p>Who am I?</p>
 </body>
 
 
