--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1><div id = name>Rohan Natraj</div></h1>
-	<p> <div id =right <img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" > </div> </p>
+	<p> <img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" > </p>
 	<p>Who am I?</p>
 </body>
 
