--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
 	<h1><div id = name>Rohan Natraj</div></h1>
-	<p> <img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" > </p>
-	<p>Who am I?</p>
+	<p><div id=right  <img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" ></div> </p>
+	<p><div id=left>Bio?</div></p>
 </body>
 
 
