--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1><div id = name>Rohan Natraj</div></h1>
 	<p><div id=right  <img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" ></div> </p>
-	<p><div id=left>Bio?</div></p>
+	<p><div id=left>Bio</div></p>
 </body>
 
 
