--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 
 <body>
 	<h1><div id = name>Rohan Natraj</div></h1>
-	<div id=right<p> <img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" > </p></div>
-	<p><div id=left>Bio</div></p>
+	<!--<div id=right<p><img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" > </p></div>
+	-->
+	<p><a href= "AboutMe.html">About Me</a></p>
+	<p><a href = "Resume.pdf">Resume</a></p>
+	
 </body>
 
 
