--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 
 <body>
-	<h1><div id = name>Rohan Natraj</div></h1>
+	<div id = name><h1>Rohan Natraj</h1></div>
 	<!--<div id=right<p><img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" > </p></div>
 	-->
-	<p><a href= "AboutMe.html">About Me</a></p>
-	<p><a href = "Resume.pdf">Resume</a></p>
+	<p><a href= "AboutMe.html">About Me</a></p> <p><a href = "Resume.html">Resume</a></p>
+		
+	
 	
 </body>
 
