--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	<div id = name><h1>Rohan Natraj</h1></div>
 	<!--<div id=right<p><img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" > </p></div>
 	-->
-	<p><a href= "AboutMe.html">About Me</a></p> <p><a href = "Resume.html">Resume</a></p>
+	<div id =center>
+	<p><a href= "AboutMe.html">About Me</a></p> 
+	<p><a href = "Resume.html">Resume</a></p>
 		
-	
+	</div>
 	
 </body>
 
