--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 
 <body>
 	<div id = name><h1>Rohan Natraj</h1></div>
-	<!--<div id=right<p><img src="./c_hobbes.jpg" alt="I Suppose it Will All Make Sense When We Grow Up" > </p></div>
-	-->
-	<div id =center>
-	<p><a href= "AboutMe.html">About Me</a></p> 
-	<p><a href = "Resume.html">Resume</a></p>
-		
-	</div>
+	
+	<ul> 
+	<li><a href= "AboutMe.html">About Me</a></li> 
+	<li><a href = "Resume.html">Resume</a></li>
+	</ul>	
 	
 </body>
 
