--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id = name><h1>Rohan Natraj</h1></div>
 	
 	<ul> 
-	<li><a href= "AboutMe.html">About Me</a></li> 
+	<li><a href= "Bio.html">About Me</a></li> 
 	<li><a href = "Resume.html">Resume</a></li>
 	</ul>	
 	
