--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<div id = name><h1>Rohan Natraj</h1></div>
+	<h1>Rohan Natraj</h1>
+	
+	<h2>Hello! Welcome to My Online Portfolio</h2>
 	
 	<ul> 
 	<li><a href= "Bio.html">About Me</a></li> 
