--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>Rohan Natraj</h1>
+	<div id="name"><h1>Rohan Natraj</h1></div>
 	
 	<h2>Hello! Welcome to My Online Portfolio</h2>
 	
