--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="name"><h1>Rohan Natraj</h1></div>
 	
-	<h2>Hello! Welcome to My Online Portfolio</h2>
+	<div id= greeting><h2>Hello! Welcome to My Online Portfolio</h2></div>
 	
 	<ul> 
 	<li><a href= "Bio.html">About Me</a></li> 
