--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<div id="name"><h1>Rohan Natraj</h1></div>
 	
 	<h2>Hello! Welcome to My Online Portfolio</h2>
-	<div id= greeting></div>
+	
+	<div</div>
 	
 	<ul> 
 	<li><a href= "Bio.html">About Me</a></li> 
