--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<h2>Hello! Welcome to My Online Portfolio</h2>
 	
-	<div</div>
+	<div id="greeting"></div>
 	
 	<ul> 
 	<li><a href= "Bio.html">About Me</a></li> 
