--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 	<div id="name"><h1>Rohan Natraj</h1></div>
 	
-	<h2>Hello! Welcome to My Online Portfolio</h2>
+	<h2>Hello! Welcome to My Online Portfolio</p>
 	
-	<div id="greeting"></div>
+
 	
 	<ul> 
-	<li><a href= "Bio.html">About Me</a></li> 
+	<div id="greeting"><li><a href= "Bio.html">About Me</a></li></div>
 	<li><a href = "Resume.html">Resume</a></li>
 	</ul>	
 	
