--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	
 	<ul> 
-	<div id="greeting"><li><a href= "Bio.html">About Me</a></li></div>
+	<li><div id="greeting"><a href= "Bio.html">About Me</a></div></li>
 	<li><a href = "Resume.html">Resume</a></li>
 	</ul>	
 	
