--- a/Resume.html
+++ b/Resume.html
@@ -3,11 +3,14 @@
 <html>
   <head>
     <meta charset=utf-8/>
+    <link rel="stylesheet" type= "text/css" media= "screen" href= "Resume.css"/>
     <title>Rohan Natraj-Resume</title>
   </head>
   
   <body>
-  
+    <h1>Rohan Natraj</h1>
+    
+    <h3>Education</h3>
   
   
   </body>
