--- a/Resume.html
+++ b/Resume.html
@@ -10,8 +10,10 @@
   <body>
     <h1>Rohan Natraj</h1>
     
-    <h3>Education</h3>
-  
+    <h2>Education</h2>
+    <h2>Research Experience</h2>
+    <h2>Work Experience</h2>
+    <h2>Skills</h2>
   
   </body>
 
