--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 	<h2>Hello! Welcome to My Online Portfolio</p>
 	
 
-	
-	<ul> 
-	<li><div id="greeting"><a href= "Bio.html">About Me</a></div></li>
-	<li><a href="Resume.html">Resume</a></li>
-	</ul>	
+	<div id="bio"><a href= "Bio.html">About Me</a></div>
+	<div id="resume"><a href="Resume.html">Resume</a></div>
+		
 	
 </body>
 
