--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<h2>Hello! Welcome to My Online Portfolio</p>
 	
 
-	<div><a href= "Bio.html">About Me</a></div>
-	<div><a href="Resume.html">Resume</a></div>
+	<div id="block"><a href= "Bio.html">About Me</a></div>
+	<div id="block"><a href="Resume.html">Resume</a></div>
 		
 	
 </body>
