--- a/Resume.html
+++ b/Resume.html
@@ -25,8 +25,33 @@
         <li>Experimental Psychology</li>
         <li>Language and Mind</li>
       </ul>
+      <p> Chinese University of Hong Kong</p>
+      <p>International Asian Studies Program</p>
+      <p>GPA: 3.5</p>
+      <p>Coursework</p>
+        <ul>
+          <li>Japanese Culture and Society</li>
+          <li>Chinese Culture and Society</li>
+        </ul>
     <h2>Skills</h2>
-    
+      <h3>Computer</h3>
+        <ul>
+          <li>Python</li>
+          <li>MySQL</li>
+          <li>HTML/CSS</li>
+          <li>SPSS</li>
+          <li>Excel</li>
+          <li>Google Sketchup</li>
+      <h3>Analytics</h3>
+        <ul>
+          <li>Google Adwords</li>
+          <li>Search Engine Marketing</li>
+        </ul>
+      <h3>Languages</h3>
+        <ul>
+          <li>Tamil (Conversational)</li>
+          <li>French (Conversational)</li>
+        </ul>
     <h2>Research Experience</h2>
     <h2>Work Experience</h2>
     
