--- a/Resume.html
+++ b/Resume.html
@@ -42,6 +42,7 @@
           <li>SPSS</li>
           <li>Excel</li>
           <li>Google Sketchup</li>
+        </ul>
       <h3>Analytics</h3>
         <ul>
           <li>Google Adwords</li>
@@ -53,9 +54,51 @@
           <li>French (Conversational)</li>
         </ul>
     <h2>Research Experience</h2>
+      <p>Harvard Business School-Research Assistant<br>September 2013-Present</p>
+        <ul>
+          <li>Research how body language and certain poses interact with human perception and decision-making.</li>
+          <li>Operate EMG equipment and collect saliva samples to research how certain poses influence our physical states</li>
+          <li>Create and organize stimuli for researching how warm and cold poses influence our mental states</li>
+        </ul>
+      <p>Tufts Neurocognition Lab-Research Assistant<br>September 2011-December 2012</p>
+        <ul>
+          <li>Co-authored a prize-winning poster examining how point-of-view and emotion influence our perception of language</li>
+          <li>Prepared and operated EEG and fMRI equipment to research how language and emotion interact in the brain.</li>
+          <li>Analyzed and organized experimental data using Excel and SPSS.</li>
+        </ul>
+        <p>Operation Wallacea-Research Assistant<br> June 7, 2011-August 2013</p>
+          <ul>
+            <li>Researched how climate change and human activity influences the endemic organisms in Cusuco National Park using
+biological fieldwork methods</li>
+            <li>Collaborated with a team of researchers through an intensive training on research methods in a jungle environment</li>
+          </ul>
     <h2>Work Experience</h2>
-    
-  
+      <p>Cogo Labs-Quantitative Data Analyst Intern<br> June 2013-August 2013</p>
+        <ul>
+          <li>Created a horoscope website at a rapidly expanding venture accelerator with a team of engineers and analysts
+to generate information on users for web-based advertising</li>
+          <li>Expanded the daily traffic to the horoscope website www.skyzodiac.com to 1,500 users using search engine
+marketing and AdWords</li>
+          <li>Grew www.skyzodiac.com to over 3,000 daily users using engaging web content, email marketing and testing of
+user-centered web designs</li>
+        </ul>
+      <p>Tufts Medical Center Department of Neuroscience-Lab Technician<br> June 2012-September 2012</p>
+        <ul>
+          <li>Independently prepared, organized, and provided Drosophila Melanogaster media for neuroscience research.</li>
+        </ul>
+      <p>Children’s Hospital Boston-Resources Intern <br> April 2011-June 2011</p>
+        <ul>
+          <li>Aided the Online Advocate—a startup at Boston Children’s Hospital—in creating an online tool to improve
+the efficiency and quality of service in social service agencies.</li>
+          <li>Researched and contacted social service agencies and health centers to build the Online Advocate database.</li>
+        </ul>
+    <h2>Volunteer Experience</h2>
+      <p>LIFT Somerville-Student Advocate <br> October 2010-May 2011</p>
+        <ul>
+          <li>Advocated for individuals who were looking for employment, legal assistance, health care, housing, and
+public benefits.</li>
+          <li>Researched and communicated with social service agencies to best serve the individual’s unique situation.</li>
+        </ul>
   </body>
 
 
