--- a/Resume.html
+++ b/Resume.html
@@ -11,10 +11,7 @@
     <h1>Rohan Natraj</h1>
     
     <h2>Education</h2>
-      <p>Tufts University</p>
-      <p>B.S Cognitive and Brain Science</p>
-      <p>GPA: 3.27</p>
-      <p>Coursework</p>
+      <p>Tufts University<br>B.S Cognitive and Brain Science<br>GPA: 3.27<br>Coursework</p>
       <ul>
         <li>Ergonomic Design</li>
         <li>Collaborative Technology Design</li>
@@ -25,10 +22,7 @@
         <li>Experimental Psychology</li>
         <li>Language and Mind</li>
       </ul>
-      <p> Chinese University of Hong Kong</p>
-      <p>International Asian Studies Program</p>
-      <p>GPA: 3.5</p>
-      <p>Coursework</p>
+      <p> Chinese University of Hong Kong<br>International Asian Studies Program<br>GPA: 3.5<br>Coursework</p>
         <ul>
           <li>Japanese Culture and Society</li>
           <li>Chinese Culture and Society</li>
