--- a/Resume.html
+++ b/Resume.html
@@ -11,7 +11,8 @@
     <h1>Rohan Natraj</h1>
     
     <h2>Education</h2>
-      <p>Tufts University<br>B.S Cognitive and Brain Science<br>GPA: 3.27<br>Coursework</p>
+      <h3>Tufts University</h3>
+      <p>B.S Cognitive and Brain Science<br>GPA: 3.27<br>Coursework</p>
       <ul>
         <li>Ergonomic Design</li>
         <li>Collaborative Technology Design</li>
@@ -22,7 +23,8 @@
         <li>Experimental Psychology</li>
         <li>Language and Mind</li>
       </ul>
-      <p> Chinese University of Hong Kong<br>International Asian Studies Program<br>GPA: 3.5<br>Coursework</p>
+      <h3> Chinese University of Hong Kong<h3>
+      <p>International Asian Studies Program<br>GPA: 3.5<br>Coursework</p>
         <ul>
           <li>Japanese Culture and Society</li>
           <li>Chinese Culture and Society</li>
