--- a/Resume.html
+++ b/Resume.html
@@ -23,7 +23,7 @@
         <li>Experimental Psychology</li>
         <li>Language and Mind</li>
       </ul>
-      <h3> Chinese University of Hong Kong<h3>
+      <h3> Chinese University of Hong Kong</h3>
       <p>International Asian Studies Program<br>GPA: 3.5<br>Coursework</p>
         <ul>
           <li>Japanese Culture and Society</li>
