--- a/Resume.html
+++ b/Resume.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset=utf-8/>
-    <link rel="stylesheet" type= "text/css" media= "screen" href= "Resume.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="Resume.css"/>
     <title>Rohan Natraj-Resume</title>
   </head>
   
@@ -82,9 +82,9 @@ user-centered web designs</li>
         <ul>
           <li>Independently prepared, organized, and provided Drosophila Melanogaster media for neuroscience research.</li>
         </ul>
-      <p>Children’s Hospital Boston-Resources Intern <br> April 2011-June 2011</p>
+      <p>Children&#39;s Hospital Boston-Resources Intern <br> April 2011-June 2011</p>
         <ul>
-          <li>Aided the Online Advocate—a startup at Boston Children’s Hospital—in creating an online tool to improve
+          <li>Aided the Online Advocate—a startup at Boston Children&#39;s Hospital—in creating an online tool to improve
 the efficiency and quality of service in social service agencies.</li>
           <li>Researched and contacted social service agencies and health centers to build the Online Advocate database.</li>
         </ul>
@@ -93,7 +93,7 @@ the efficiency and quality of service in social service agencies.</li>
         <ul>
           <li>Advocated for individuals who were looking for employment, legal assistance, health care, housing, and
 public benefits.</li>
-          <li>Researched and communicated with social service agencies to best serve the individual’s unique situation.</li>
+          <li>Researched and communicated with social service agencies to best serve the individual&#39;s unique situation.</li>
         </ul>
   </body>
 
