--- a/Resume.html
+++ b/Resume.html
@@ -84,7 +84,7 @@ user-centered web designs</li>
         </ul>
       <p>Children&#39;s Hospital Boston-Resources Intern <br> April 2011-June 2011</p>
         <ul>
-          <li>Aided the Online Advocate—a startup at Boston Children&#39;s Hospital—in creating an online tool to improve
+          <li>Aided the Online Advocate, a startup at Boston Children&#39;s Hospital, in creating an online tool to improve
 the efficiency and quality of service in social service agencies.</li>
           <li>Researched and contacted social service agencies and health centers to build the Online Advocate database.</li>
         </ul>
