--- a/Resume.html
+++ b/Resume.html
@@ -29,6 +29,7 @@
           <li>Japanese Culture and Society</li>
           <li>Chinese Culture and Society</li>
         </ul>
+    <div id= skills>
     <h2>Skills</h2>
       <h3>Computer</h3>
         <ul>
@@ -49,6 +50,7 @@
           <li>Tamil (Conversational)</li>
           <li>French (Conversational)</li>
         </ul>
+      </div>
     <h2>Research Experience</h2>
       <p>Harvard Business School-Research Assistant<br>September 2013-Present</p>
         <ul>
