--- a/Resume.html
+++ b/Resume.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-    <h1>Rohan Natraj</h1>
+    <h1><a href = "index.html">Rohan Natraj</a></h1>
     
     <h2>Education</h2>
       <h3>Tufts University</h3>
