--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h2>Hello! Welcome to My Online Portfolio</h2>
 	
 
-	<div id="bio"><a href= "Bio.html">About Me</a></div> 
+	<a href= "Bio.html">About Me</a>
 	<a href="Resume.html">Resume</a>
 		
 	
