--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	
 	<h2>Hello! Welcome to My Online Portfolio</h2>
 	
+	<img src ="./calvin_hobbes.jpg" alt= "Calvin and Hobbes">
 
 	<a href= "Bio.html">About Me</a>
 	<a href="Resume.html">Resume</a>
