--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<a href= "Bio.html">About Me</a> <br>
 	<a href="Resume.html">Resume</a>
-	<img src ="./calvin_hobbes.jpg" alt= "Calvin and Hobbes">
+	<img class ="calvin" src ="./calvin_hobbes.jpg" alt= "Calvin and Hobbes">
 	
 </body>
 
