--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<h2>Hello! Welcome to My Online Portfolio</h2>
 
-	<a href= "Bio.html">About Me</a> <br>
+	<a href= "Bio.html">About Me</a>
 	<a href="Resume.html">Resume</a>
 	<img class ="calvin" src ="./calvin_hobbes.jpg" alt= "Calvin and Hobbes">
 	
