--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h2>Hello! Welcome to My Online Portfolio</h2>
 	
 	<img class ="calvin" src ="./calvin_hobbes.jpg" alt= "Calvin and Hobbes">  
-	<a href= "Bio.html">About Me</a>
+	<a href= "Bio.html">About Me</a><br>
 	<a href="Resume.html">Resume</a>
 	
 </body>
