Update and rename Resume.html to resume.html

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset=utf-8/>
-    <link rel="stylesheet" type="text/css" media="screen" href="Resume.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="resume.css"/>
     <title>Rohan Natraj-Resume</title>
   </head>
   
