--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="name"><h1>Rohan Natraj</h1></div>
 	
 	<h2>Hello! Welcome to My Online Portfolio</h2>
-	<p><a href= "Bio.html">About Me</a><br><a href="Resume.html">Resume</a></p>
+	<p><a href= "bio.html">About Me</a><br><a href="resume.html">Resume</a></p>
 	
 	<img class ="calvin" src ="./calvin_hobbes.jpg" alt= "Calvin and Hobbes">  
 </body>
