--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 <body>
 	<div id="name"><h1>Rohan Natraj</h1></div>
-	<p><a href= "bio.html">About Me</a><br><a href="resume.html">Resume</a></p>
-	 
+	<div id="links">
+	<a href= "bio.html">About Me</a><a href="resume.html">Resume</a>
+	</div>
 </body>
 
 
