--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head> <title>Rohan Natraj</title> 
 	<meta charset=utf-8 />
 	<link rel="stylesheet" type="text/css" media="screen" href="index.css"/>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
