--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-	<div id="name"><h1>Rohan Natraj</h1></div>
+	<div id="name">Rohan Natraj</div>
 	<div id="links">
-	<a href= "bio.html">About Me</a><a href="resume.html">Resume</a>
+	<a href="bio.html">About Me</a><a href="resume.html">Resume</a>
 	</div>
 </body>
 
