--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
 	<div id="name">Rohan Natraj</div>
-	<div id="links">
-	<a href="bio.html">About Me</a><a href="resume.html">Resume</a>
+	<div class ="links">
+	<div id="bio"><a href="bio.html">About Me</a></div> <div id="resume"><a href="resume.html">Resume</a></div>
 	</div>
 </body>
 
