--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 	<div id="name">Rohan Natraj</div>
 	<div class ="links">
-	<div id="bio"><a href="bio.html">About Me</a></div> <div id="resume"><a href="resume.html">Resume</a></div>
+	<div id="bio"><a href="bio.html">About Me</a></div> 
+	<div id="resume"><a href="resume.html">Resume</a></div>
+	<div id="contact">Contact</div>
 	</div>
 </body>
 
