back to the building blocks

--- a/index.html
+++ b/index.html
@@ -4,20 +4,13 @@
 <head> <title>Rohan Natraj</title> 
 	<meta charset=utf-8 />
 	<link rel="stylesheet" type="text/css" media="screen" href="index.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	
 </head>
-
 <body>
-	<div id="name">Rohan Natraj</div>
-	<div class ="links">
-	<div id="bio"><a href="bio.html">About Me</a></div> 
-	<div id="resume"><a href="resume.html">Resume</a></div>
-	<div id="contact">Contact</div>
-	</div>
+	<div style="font-size:60px; text=align:center">Soon. So Soon.</div>
 </body>
-
-
-
-
 
 </html>
