new homepage and styling for paralax'

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 
 <html>
-<head> <title>Rohan Natraj</title> 
+<head> <title>Rohan Natraj | Research, UX, Development</title> 
 	<meta charset=utf-8 />
 	<link rel="stylesheet" type="text/css" media="screen" href="index.css"/>
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-	
 </head>
 <body>
-	<div style="font-size:60px; text=align:center">Soon. So Soon.</div>
-</body>
+<div class="parallax-background">
+  <div class="intro-text">
+    Hello & Welcome
+    <p><i class="fi-arrow-down"></i></p>
+  </div>
+</div>
 
+<div class="parallax-content">
+  <p>Bacon ipsum dolor sit amet chicken pork loin hamburger ball tip, swine tenderloin salami meatball boudin tri-tip fatback shank bacon. Pork salami kevin, brisket spare ribs strip steak ham hock porchetta. Pork belly short loin tail porchetta. Pork pig meatball, beef ribs doner jerky tri-tip hamburger filet mignon strip steak ball tip ham tail tongue corned beef.</p>
+
+</div>
+<div class="parallax-background">
+	  <p>Chicken kielbasa swine ham hock filet mignon strip steak bacon fatback pork t-bone. Ground round shankle tongue, jowl flank spare ribs beef leberkas ham boudin shank capicola short ribs. Drumstick pork loin turkey pork chop salami andouille pork belly. Short loin tongue tri-tip, hamburger filet mignon pastrami doner shoulder turkey ball tip t-bone jerky ham chicken.</p>
+</div>
 </html>
