--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head> 
 	<meta charset=utf-8 />
 	<link rel="stylesheet" type="text/css" media="screen" href="index.css"/>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.1/foundation.min.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.1/foundation.min.js"></script>
@@ -13,9 +14,9 @@
 
 </head>
 <body>
-<div class="parallax-background">
+<div class="parallax-background" id="atf-content">
   <div class="intro-text">
-    Hello & Welcome
+    Hello &<br>Welcome
     <p><i class="fi-arrow-down"></i></p>
   </div>
 </div>
