--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Fullscreen Layout with Page Transitions</title>
+		<title>Rohan Natraj | Research, UX, Development</title>
 		<meta name="description" content="Fullscreen Layout with Page Transitions" />
-		<meta name="keywords" content="fullscreen layout, boxes, responsive, page transitions, css transitions, jquery, portfolio, template" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico"> 
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<script src="js/modernizr.custom.js"></script>
+		<link rel="stylesheet" type="text/css" href="index.css" />
+		<script src="modernizr.custom.js"></script>
 	</head>
 	<body>
 		<div class="container">	
