--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="boxlayout.js"></script>
 		<title>Rohan Natraj | Research, UX, Development</title>
 		<meta name="description" content="Fullscreen Layout with Page Transitions" />
 		<link rel="stylesheet" type="text/css" href="index.css" />
@@ -123,8 +125,6 @@
 				</div>
 			</div>
 		</div><!-- /container -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="js/boxlayout.js"></script>
 		<script>
 			$(function() {
 				Boxlayout.init();
