--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>		
 		<script src="boxlayout.js"></script>
-		<script src="modernizr.custom.js"></script>
 		<title>Rohan Natraj | Research, UX, Development</title>
 		<meta name="description" content="Fullscreen Layout with Page Transitions" />
 		<link rel="stylesheet" type="text/css" href="index.css" />
