--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<div class="container">	
-			<div id="bl-main" class="bl-main">
+			<div id="bl-main-sections" class="bl-main">
 				<section>
 					<div class="bl-box">
 						<h2 class="bl-icon bl-icon-about">About</h2>
