--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</section>
 				<section>
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-blog">Blog</h2>
+						<h2 class="bl-icon bl-icon-blog">Thoughts</h2>
 					</div>
 					<div class="bl-content">
 						<h2>My Musings</h2>
@@ -82,8 +82,8 @@
 						<h2 class="bl-icon bl-icon-contact">Contact</h2>
 					</div>
 					<div class="bl-content">
-						<h2>Get in touch</h2>
-						<p>Pinterest semiotics single-origin coffee craft beer thundercats irony, tumblr bushwick intelligentsia pickled. Narwhal mustache godard master cleanse street art, occupy ugh selfies put a bird on it cray salvia four loko gluten-free shoreditch. Occupy american apparel freegan cliche. Mustache trust fund 8-bit jean shorts mumblecore thundercats. Pour-over small batch forage cray, banjo post-ironic flannel keffiyeh cred ethnic semiotics next level tousled fashion axe. Sustainable cardigan keytar fap bushwick bespoke.</p>
+						<h2 >Feel Free to Reach Out</h2>
+						<p></p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
@@ -126,7 +126,6 @@
 		</div><!-- /container -->
 		<script src="boxlayout.js"></script>
 		<script>
-
 			$(function() {
 				Boxlayout.init();
 			});
