--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="UTF-8"/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>		
 		<title>Rohan Natraj | Research, UX, Development</title>
-		<meta name="description" content="Fullscreen Layout with Page Transitions" />
 		<link rel="stylesheet" type="text/css" href="index.css" />
 		
 	</head>
 	<body>
-		<div class="container">	
+		<div class="container">
+			<div id="welcome-message">
+				<p>Hello &</p>
+				<p>Welcome</p>
+			</div>
 			<div id="bl-main-sections" class="bl-main">
 				<section>
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-about">About</h2>
+						<h2 class="bl-icon bl-icon-about">About Me</h2>
 					</div>
 					<div class="bl-content">
-						<h2>About this layout</h2>
-						<p>This responsive layout is based on an initial grid of four boxes. Once a box is clicked, it gets resized to fullscreen and the other boxes scale down and fade out. In the work section we experiment with another transition which is to show a panel by making it appear from the bottom while scaling the current one down. To see it in action, open the work section and click on one of the portfolio items and navigate through them.</p>
+						<h2>Think Critically, Test, Create. </h2>
+						<p>Welcome to my github page!</p>
 						<p>
 							<a href="index.html"><strong>&laquo; Go Back Home</strong></a>
 						</p>
@@ -40,40 +43,15 @@
 							<li data-panel="panel-3"><a href="#"><img src="images/3.jpg" /></a></li>
 							<li data-panel="panel-4"><a href="#"><img src="images/4.jpg" /></a></li>
 						</ul>
-						<p>Illustrations by <a href="http://dribbble.com/isaac317/click">Isaac Montemayor</a></p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
 				<section>
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-blog">Thoughts</h2>
+						<h2 class="bl-icon bl-icon-blog">Resume</h2>
 					</div>
 					<div class="bl-content">
-						<h2>My Musings</h2>
-						<article>
-							<h3>Being a Freelance Designer</h3>
-							<p>Stumptown helvetica cardigan, odd future seitan tattooed flannel. Kale chips direct trade cray beard. 8-bit etsy butcher post-ironic blog lo-fi mcsweeney's, sustainable pickled umami flexitarian DIY ethical plaid trust fund. Wolf cred organic, terry richardson aesthetic four loko occupy vegan chillwave readymade deep... <a href="#">Read more</a></p>
-						</article>
-						<article>
-							<h3>Working with Photoshop</h3>
-							<p>Cosby sweater odd future gluten-free actually dreamcatcher. Fixie cray vice sriracha disrupt, lo-fi pitchfork mcsweeney's swag YOLO meh chambray etsy. Keytar sriracha fanny pack church-key hashtag vice blog. 3 wolf moon VHS helvetica, raw denim deep v shoreditch seitan twee... <a href="#">Read more</a></p>
-						</article>
-						<article>
-							<h3>Making use of Icon Fonts</h3>
-							<p>Locavore irony gastropub chillwave, butcher meggings flexitarian pinterest master cleanse godard. Intelligentsia pop-up neutra, williamsburg gastropub godard pinterest swag deep v umami lomo. Butcher next level 90's wolf bushwick, narwhal photo booth YOLO kale chips whatever small batch. Meh viral ethical hella cardigan portland, street art mlkshk meggings mixtape kale chips cliche messenger bag pitchfork... <a href="#">Read more</a></p>
-						</article>
-						<article>
-							<h3>Being a Freelance Designer</h3>
-							<p>Stumptown helvetica cardigan, odd future seitan tattooed flannel. Kale chips direct trade cray beard. 8-bit etsy butcher post-ironic blog lo-fi mcsweeney's, sustainable pickled umami flexitarian DIY ethical plaid trust fund. Wolf cred organic, terry richardson aesthetic four loko occupy vegan chillwave readymade deep... <a href="#">Read more</a></p>
-						</article>
-						<article>
-							<h3>Working with Photoshop</h3>
-							<p>Cosby sweater odd future gluten-free actually dreamcatcher. Fixie cray vice sriracha disrupt, lo-fi pitchfork mcsweeney's swag YOLO meh chambray etsy. Keytar sriracha fanny pack church-key hashtag vice blog. 3 wolf moon VHS helvetica, raw denim deep v shoreditch seitan twee... <a href="#">Read more</a></p>
-						</article>
-						<article>
-							<h3>Making use of Icon Fonts</h3>
-							<p>Locavore irony gastropub chillwave, butcher meggings flexitarian pinterest master cleanse godard. Intelligentsia pop-up neutra, williamsburg gastropub godard pinterest swag deep v umami lomo. Butcher next level 90's wolf bushwick, narwhal photo booth YOLO kale chips whatever small batch. Meh viral ethical hella cardigan portland, street art mlkshk meggings mixtape kale chips cliche messenger bag pitchfork... <a href="#">Read more</a></p>
-						</article>
+
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
@@ -83,7 +61,9 @@
 					</div>
 					<div class="bl-content">
 						<h2 >Feel Free to Reach Out</h2>
-						<p></p>
+						<p><a target="_blank" href="https://www.facebook.com/rohan.natraj"><img src="icons/facebook.png"/></a></p>
+						<p><a href="mailto:ron4trj@gmail.com"><img src="icons/gmail.png"/></a></p>
+						<p><a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img src="icons/linkedin.png"/></a></p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
