align contact items

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<body>
 		<div class="container">
 			<div id="welcome-message">
-				<p>Hello &</p>
-				<p>Welcome</p>
+				<h1>Hello & Welcome</h1>
 			</div>
 			<div id="bl-main-sections" class="bl-main">
 				<section>
@@ -60,10 +59,12 @@
 						<h2 class="bl-icon bl-icon-contact">Contact</h2>
 					</div>
 					<div class="bl-content">
-						<h2 >Feel Free to Reach Out</h2>
+						<h2>Feel Free to Reach Out</h2>
+						<div style="display:flex;justify-content:center;align-items:center;">
 						<p><a target="_blank" href="https://www.facebook.com/rohan.natraj"><img src="icons/facebook.png"/></a></p>
 						<p><a href="mailto:ron4trj@gmail.com"><img src="icons/gmail.png"/></a></p>
 						<p><a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img src="icons/linkedin.png"/></a></p>
+						<div>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
