align contact items

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div id="welcome-message">
+			<div id="welcome-message" style="text-align:center">
 				<h1>Hello & Welcome</h1>
 			</div>
 			<div id="bl-main-sections" class="bl-main">
@@ -61,9 +61,9 @@
 					<div class="bl-content">
 						<h2>Feel Free to Reach Out</h2>
 						<div style="display:flex;justify-content:center;align-items:center;">
-						<p><a target="_blank" href="https://www.facebook.com/rohan.natraj"><img src="icons/facebook.png"/></a></p>
-						<p><a href="mailto:ron4trj@gmail.com"><img src="icons/gmail.png"/></a></p>
-						<p><a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img src="icons/linkedin.png"/></a></p>
+						<p><a target="_blank" href="https://www.facebook.com/rohan.natraj"><img style="width:200px; height:200px" src="icons/facebook.png"/></a></p>
+						<p><a href="mailto:ron4trj@gmail.com"><img style="width:200px; height:200px" src="icons/gmail.png"/></a></p>
+						<p><a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img style="width:200px; height:200px" src="icons/linkedin.png"/></a></p>
 						<div>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
