--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="container">
 			<div id="welcome-message" style="text-align:center">
-				<h1>Hello & Welcome</h1>
+				<h1>Rohan Natraj | Research, User Experience, & Development</h1>
 			</div>
 			<div id="bl-main-sections" class="bl-main">
 				<section>
@@ -22,13 +22,16 @@
 					</div>
 					<div class="bl-content">
 						<h2>Think Critically, Test, Create. </h2>
-						<p>Welcome to my github page!</p>
+						<p>Hello & welcome! My name is Rohan Natraj. I am a user experience researcher and product developer. I believe beautiful products are born from a strong and deliberate emphasis on understanding the needs and wants of one's audience. By focusing on comprehensively learning about and developing for users, businesses can deliver enjoyable experiences while reaping the rewards of excellent engagement metrics and an expanding user base.</p>
+						<p>By leveraging my academic and research experience in Cognitive Science, I am able to gather and deliver valuable insights on how to build products that provide clean, pleasing experiences that coincide with user expectations. I believe that understanding our mental models and processes of perception is an essential aspect of creating meaningful and valuable products.</p>
+						<p>As a product developer, I am able to couch my passion for user experience research in a pragmatic and business-focused persecptive. Using my foundation as a </p>
 						<p>
-							<a href="index.html"><strong>&laquo; Go Back Home</strong></a>
+							<a href="index.html"><strong>&laquo; Back Home</strong></a>
 						</p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
+				<!--
 				<section id="bl-work-section">
 					<div class="bl-box">
 						<h2 class="bl-icon bl-icon-works">Works</h2>
@@ -45,6 +48,7 @@
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
+			-->
 				<section>
 					<div class="bl-box">
 						<h2 class="bl-icon bl-icon-blog">Resume</h2>
