about me text, styling

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					</div>
 					<div class="bl-content">
 						<h2>Think Critically, Test, Create. </h2>
-						<p>Hello & welcome! My name is Rohan Natraj. I am a user experience researcher and product developer. I believe beautiful products are born from a strong and deliberate emphasis on understanding the needs and wants of one's audience. By focusing on comprehensively learning about and developing for users, businesses can deliver enjoyable experiences while reaping the rewards of excellent engagement metrics and an expanding user base.</p>
-						<p>By leveraging my academic and research experience in Cognitive Science, I am able to gather and deliver valuable insights on how to build products that provide clean, pleasing experiences that coincide with user expectations. I believe that understanding our mental models and processes of perception is an essential aspect of creating meaningful and valuable products.</p>
-						<p>As a product developer, I am able to couch my passion for user experience research in a pragmatic and business-focused persecptive. Using my foundation as a </p>
+						<p>Hello & welcome! My name is Rohan Natraj. I am a user experience researcher and product developer. I believe beautiful products are created with a  understanding the needs and wants of one's audience. By focusing on comprehensively learning about and developing for users, businesses can deliver enjoyable experiences while reaping the rewards of excellent engagement  and an loyal users.</p>
+						<p>By leveraging my academic and research experience in Cognitive Science, I am able to gather and deliver valuable insights on how to build products with clean, pleasing experiences that coincide with user expectations. I believe that understanding our mental models and processes of perception is essential to creating meaningful and valuable products.</p>
+						<p>As a product developer, I blend my passion for UX research with a keen understanding of how to build with business goals in mind.</p>
 						<p>
 							<a href="index.html"><strong>&laquo; Back Home</strong></a>
 						</p>
@@ -48,7 +48,7 @@
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
-			-->
+				-->
 				<section>
 					<div class="bl-box">
 						<h2 class="bl-icon bl-icon-blog">Resume</h2>
