--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 						<h2 class="bl-icon bl-icon-about">About Me</h2>
 					</div>
 					<div class="bl-content">
-						<h2>Think Critically, Test, Create. </h2>
-						<p>Hello & welcome! My name is Rohan Natraj. I am a user experience researcher and product developer. I believe beautiful products are created with a  understanding the needs and wants of one's audience. By focusing on comprehensively learning about and developing for users, businesses can deliver enjoyable experiences while reaping the rewards of excellent engagement  and an loyal users.</p>
-						<p>By leveraging my academic and research experience in Cognitive Science, I am able to gather and deliver valuable insights on how to build products with clean, pleasing experiences that coincide with user expectations. I believe that understanding our mental models and processes of perception is essential to creating meaningful and valuable products.</p>
-						<p>As a product developer, I blend my passion for UX research with a keen understanding of how to build with business goals in mind.</p>
+						<h2>Research, Build, Test </h2>
+						<p>Hello & welcome! My name is Rohan Natraj. I am a user experience researcher and product developer. I believe beautiful products are created by understanding the needs and wants of one's audience. By focusing on developing for users, businesses can build enjoyable experiences while reaping the rewards of engaged and loyal users.</p>
+						<p>By leveraging my academic and research experience in Cognitive Science, I am able to gather and deliver valuable insights on how to create products with clean, pleasing experiences that coincide with user expectations. I believe understanding our mental models and processes of perception is essential to creating testable hypotheses and valuable products.</p>
 						<p>
 							<a href="index.html"><strong>&laquo; Back Home</strong></a>
 						</p>
