--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
-				<!--
+				
 				<section id="bl-work-section">
 					<div class="bl-box">
 						<h2 class="bl-icon bl-icon-works">Works</h2>
 					</div>
 					<div class="bl-content">
-						<h2>My Works</h2>
+						<h2>Portfolio</h2>
 						<p>Mung bean maize dandelion sea lettuce catsear bunya nuts ricebean tatsoi caulie horseradish pea.</p>
 						<ul id="bl-work-items">
 							<li data-panel="panel-1"><a href="#"><img src="images/1.jpg" /></a></li>
@@ -47,7 +47,7 @@
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
-				-->
+			
 				<section>
 					<div class="bl-box">
 						<h2 class="bl-icon bl-icon-blog">Resume</h2>
