responsive;element ids

--- a/index.html
+++ b/index.html
@@ -63,11 +63,17 @@
 					</div>
 					<div class="bl-content">
 						<h2>Feel Free to Reach Out</h2>
-						<div style="display:flex;justify-content:center;align-items:center;">
-						<p><a target="_blank" href="https://www.facebook.com/rohan.natraj"><img style="width:200px; height:200px" src="icons/facebook.png"/></a></p>
-						<p><a href="mailto:ron4trj@gmail.com"><img style="width:200px; height:200px" src="icons/gmail.png"/></a></p>
-						<p><a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img style="width:200px; height:200px" src="icons/linkedin.png"/></a></p>
-						<div>
+						<div id="contact-links">
+						<p>
+							<a target="_blank" href="https://www.facebook.com/rohan.natraj"><img style="width:150px; height:150px" src="icons/facebook.png"/></a>
+						</p>
+						<p>
+							<a href="mailto:ron4trj@gmail.com"><img style="width:150px; height:150px" src="icons/gmail.png"/></a>
+						</p>
+						<p>
+							<a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img style="width:150px; height:150px" src="icons/linkedin.png"/></a>
+						</p>
+						</div>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
