markup; add resume

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 						<p>Hello & welcome! My name is Rohan Natraj. I am a user experience researcher and product developer. I believe beautiful products are created by understanding the needs and wants of one's audience. By focusing on developing for users, businesses can build enjoyable experiences while reaping the rewards of engaged and loyal users.</p>
 						<p>By leveraging my academic and research experience in Cognitive Science, I am able to gather and deliver valuable insights on how to create products with clean, pleasing experiences that coincide with user expectations. I believe understanding our mental models and processes of perception is essential to creating testable hypotheses and valuable products.</p>
 						<p>
-							<a href="index.html"><strong>&laquo; Back Home</strong></a>
 						</p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
@@ -33,7 +32,7 @@
 				
 				<section id="bl-work-section">
 					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-works">Works</h2>
+						<h2 class="bl-icon bl-icon-works">Portfolio</h2>
 					</div>
 					<div class="bl-content">
 						<h2>Portfolio</h2>
@@ -65,19 +64,20 @@
 						<h2>Feel Free to Reach Out</h2>
 						<div id="contact-links">
 						<p>
-							<a target="_blank" href="https://www.facebook.com/rohan.natraj"><img style="width:150px; height:150px" src="icons/facebook.png"/></a>
+							<a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img style="width:150px; height:150px" src="icons/linkedin.png"/></a>
 						</p>
 						<p>
 							<a href="mailto:ron4trj@gmail.com"><img style="width:150px; height:150px" src="icons/gmail.png"/></a>
 						</p>
 						<p>
-							<a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img style="width:150px; height:150px" src="icons/linkedin.png"/></a>
+							<a target="_blank" href="https://www.facebook.com/rohan.natraj"><img style="width:150px; height:150px" src="icons/facebook.png"/></a>
 						</p>
 						</div>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
-				<!-- Panel items for the works -->
+
+				<!-- Panel items for the portfolio section -->
 				<div class="bl-panel-items" id="bl-panel-work-items">
 					<div data-panel="panel-1">
 						<div>
@@ -114,6 +114,8 @@
 				</div>
 			</div>
 		</div><!-- /container -->
+
+
 		<script src="boxlayout.js"></script>
 		<script>
 			$(function() {
