--- a/index.html
+++ b/index.html
@@ -24,12 +24,19 @@
 						<h2>Research, Build, Test </h2>
 						<p>Hello & welcome! My name is Rohan Natraj. I am a user experience researcher and product developer. I believe beautiful products are created by understanding the needs and wants of one's audience. By focusing on developing for users, businesses can build enjoyable experiences while reaping the rewards of engaged and loyal users.</p>
 						<p>By leveraging my academic and research experience in Cognitive Science, I am able to gather and deliver valuable insights on how to create products with clean, pleasing experiences that coincide with user expectations. I believe understanding our mental models and processes of perception is essential to creating testable hypotheses and valuable products.</p>
-						<p>
-						</p>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
-				
+				<section>
+					<div class="bl-box">
+						<h2 class="bl-icon bl-icon-blog">Resume</h2>
+					</div>
+					<div class="bl-content">
+						<iframe src="http://docs.google.com/gview?url=./resume/NatrajResume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+					</div>
+					<span class="bl-icon bl-icon-close"></span>
+				</section>
+
 				<section id="bl-work-section">
 					<div class="bl-box">
 						<h2 class="bl-icon bl-icon-works">Portfolio</h2>
@@ -47,15 +54,7 @@
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
 			
-				<section>
-					<div class="bl-box">
-						<h2 class="bl-icon bl-icon-blog">Resume</h2>
-					</div>
-					<div class="bl-content">
 
-					</div>
-					<span class="bl-icon bl-icon-close"></span>
-				</section>
 				<section>
 					<div class="bl-box">
 						<h2 class="bl-icon bl-icon-contact">Contact</h2>
