--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<h2 class="bl-icon bl-icon-blog">Resume</h2>
 					</div>
 					<div class="bl-content">
-						<iframe src="http://docs.google.com/gview?url=./resume/NatrajResume.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+						<embed src="./resume/NatrajResume.pdf" width="500" height="450" type='application/pdf'>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
