--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<h2 class="bl-icon bl-icon-blog">Resume</h2>
 					</div>
 					<div class="bl-content">
-						<embed src="./resume/NatrajResume.pdf" width="500" height="450" type='application/pdf'>
+						<embed src="./resume/NatrajResume.pdf" width= 100% height=100% type='application/pdf'>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
