--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 						<h2 class="bl-icon bl-icon-blog">Resume</h2>
 					</div>
 					<div class="bl-content">
-						<embed src="./resume/NatrajResume.pdf" width= 100% height=100% type='application/pdf'>
+						<div id= "resume">
+						<embed src="./resume/NatrajResume.pdf" width="80%" height="100%" type='application/pdf'>
+						</div>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
 				</section>
