--- a/index.html
+++ b/index.html
@@ -24,18 +24,26 @@
 						<h2>Research, Build, Test </h2>
 						<p>Hello & welcome! My name is Rohan Natraj. I am a user experience researcher and product developer. I believe beautiful products are created by understanding the needs and wants of one's audience. By focusing on developing for users, businesses can build enjoyable experiences while reaping the rewards of an engaged and loyal audience.</p>
 						<p>By leveraging my research experience in Cognitive Science and experience in product development, I am able to gather and deliver valuable insights on how to create products with clean, pleasing experiences that coincide with user expectations. I believe understanding our mental models and processes of perception is essential to creating testable hypotheses and valuable products.</p>
-						<p>I am a lifelong learner continuously seeking to expand my skillset and repertoir of technical tools. Here are many of the technologies I have worked with during my academic and professional careers:</p>
+						<p>I am a lifelong learner continuously seeking to expand my skillset and repertoir of technical tools. Here are some of the technologies I have worked with during my academic and professional careers:</p>
 						<div id="technologies">
 						<p>
-							<a target="_blank" href="https://www.linkedin.com/in/rohannatraj"><img style="width:150px; height:150px" src="icons/linkedin.png"/></a>
+							<a target="_blank" href="https://www.javascript.com/"><img style="width:100px; height:100px" src="icons/jsLogo.png"/></a>
 						</p>
 						<p>
-							<a href="mailto:ron4trj@gmail.com"><img style="width:150px; height:150px" src="icons/gmail.png"/></a>
+							<a target="_blank" href="https://jquery.com/"><img style="width:100px; height:100px" src="icons/jquery.png"/></a>
 						</p>
 						<p>
-							<a target="_blank" href="https://www.facebook.com/rohan.natraj"><img style="width:150px; height:150px" src="icons/facebook.png"/></a>
-						</p>							
-
+							<a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"><img style="width:100px; height:100px" src="icons/html5.png"/></a>
+						</p>
+						<p>
+							<a target="_blank" href="https://www.mysql.com/"><img style="width:100px; height:100px" src="icons/mysql.png"/></a>
+						</p>
+						<p>
+							<a target="_blank" href="http://community.pentaho.com/projects/data-integration/"><img style="width:100px; height:100px" src="icons/kettle.png"/></a>
+						</p>
+						<p>
+							<a target="_blank" href="https://github.com/ron4trj"><img style="width:100px; height:100px" src="icons/github.png"/></a>
+						</p>
 						</div>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
