balsamiq icon; styling

--- a/index.html
+++ b/index.html
@@ -27,23 +27,26 @@
 						<p>I am a lifelong learner continuously seeking to expand my skillset and repertoir of technical tools. Here are some of the technologies I have worked with during my academic and professional careers:</p>
 						<div id="technologies">
 						<p>
-							<a target="_blank" href="https://www.javascript.com/"><img style="width:100px; height:100px" src="icons/jsLogo.png"/></a>
+							<a target="_blank" href="https://www.javascript.com/"><img src="icons/jsLogo.png"/></a>
 						</p>
 						<p>
-							<a target="_blank" href="https://jquery.com/"><img style="width:100px; height:100px" src="icons/jquery.png"/></a>
+							<a target="_blank" href="https://jquery.com/"><img src="icons/jquery.png"/></a>
 						</p>
 						<p>
-							<a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"><img style="width:100px; height:100px" src="icons/html5.png"/></a>
+							<a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"><img src="icons/html5.png"/></a>
 						</p>
 						<p>
-							<a target="_blank" href="https://www.mysql.com/"><img style="width:100px; height:100px" src="icons/mysql.png"/></a>
+							<a target="_blank" href="https://www.mysql.com/"><img src="icons/mysql.png"/></a>
 						</p>
 						<p>
-							<a target="_blank" href="http://community.pentaho.com/projects/data-integration/"><img style="width:100px; height:100px" src="icons/kettle.png"/></a>
+							<a target="_blank" href="http://community.pentaho.com/projects/data-integration/"><img src="icons/kettle.png"/></a>
 						</p>
 						<p>
-							<a target="_blank" href="https://github.com/ron4trj"><img style="width:100px; height:100px" src="icons/github.png"/></a>
+							<a target="_blank" href="https://github.com/ron4trj"><img src="icons/github.png"/></a>
 						</p>
+						<p>
+							<a target="_blank" href="https://balsamiq.com/"><img src="icons/balsamiq.png"/></a>
+						</p>						
 						</div>
 					</div>
 					<span class="bl-icon bl-icon-close"></span>
