--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"><img src="icons/html5.png"/></a>
 						</p>
 						<p>
-							<a target="_blank" href="https://www.mysql.com/"><img src="icons/mysql.png"/></a>
+							<a target="_blank" href="https://www.mysql.com/"><img style="width:150px" src="icons/mysql.png"/></a>
 						</p>
 						<p>
 							<a target="_blank" href="http://community.pentaho.com/projects/data-integration/"><img style="width: 230px" src="icons/kettle.png"/></a>
